Fix styling issue with joboffers on mobile devices

--- a/src/styles/jobofferList.less
+++ b/src/styles/jobofferList.less
@@ -18,7 +18,7 @@
     }
   }
 
-  .content {
+  .joboffer-content {
     grid-area: content;
     padding: 1em;
 
